--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,5 +1,40 @@
+.container {
+  display: flex;
+  gap: 100px;
+}
+.textContainer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.header {
+  color: var(--btn);
+}
+.title {
+  font-size: 54px;
+}
+.description {
+  font-size: 20px;
+  font-weight: 300;
+}
+.boxes {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.box h1 {
+  color: var(--btn);
+}
 .imgContainer {
   position: relative;
-  width: 100px;
-  height: 500px;
+  flex: 1;
+}
+.img {
+  object-fit: contain;
 }
