--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -38,3 +38,15 @@
 .img {
   object-fit: contain;
 }
+
+@media (max-width: 768px) {
+  .container,
+  .boxes {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .boxes {
+    gap: 50px;
+  }
+}
