--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -35,11 +35,27 @@
   position: relative;
   filter: grayscale(1);
 }
-.brandImage {
-}
+
 .imgContainer {
   position: relative;
   flex: 1;
 }
-.heroImage {
+
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+    text-align: center;
+  }
+  .buttons {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 64px;
+  }
+  .brands {
+    width: 100%;
+  }
 }
