--- a/src/app/(auth)/login/login.module.css
+++ b/src/app/(auth)/login/login.module.css
@@ -13,27 +13,8 @@
   gap: 30px;
   border-radius: 5px;
 }
-.form {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  gap: 30px;
-}
-
-.form input {
-  padding: 20px;
-  background-color: var(--bg);
-  color: var(--text);
-  border: none;
-  border-radius: 5px;
-}
-
-.form button {
+.github {
+  width: 100%;
   padding: 20px;
   cursor: pointer;
-  background-color: var(--btn);
-  color: var(--text);
-  font-weight: bold;
-  border: none;
-  border-radius: 5px;
 }
