--- a/src/app/admin/admin.module.css
+++ b/src/app/admin/admin.module.css
@@ -1,30 +1,13 @@
 .container {
-  margin-top: 50px;
-}
-.row {
   display: flex;
-  gap: 100px;
 }
-.row h1 {
-  font-size: 24px;
-  font-weight: 300;
-}
-.col {
+.menu {
   flex: 1;
+  background-color: var(--bgSoft);
+  padding: 20px;
 }
 
-.col img {
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.line {
-  margin: 100px;
-  color: var(--bg);
-}
-
-@media (max-width: 768px) {
-  .row {
-    flex-direction: column;
-  }
+.content {
+  flex: 4;
+  padding: 20px;
 }
