--- a/src/components/admin/sidebar/menuLink/menuLink.module.css
+++ b/src/components/admin/sidebar/menuLink/menuLink.module.css
@@ -1,8 +1,10 @@
 .container {
-  padding: 20px;
+  padding: 15px;
   display: flex;
   align-items: center;
   gap: 10px;
+  border-radius: 10px;
+  margin: 5px 0;
 }
 
 .container:hover,
