--- a/src/components/admin/sidebar/sidebar.module.css
+++ b/src/components/admin/sidebar/sidebar.module.css
@@ -29,7 +29,22 @@
 }
 .menu {
   color: var(--textSoft);
-  font-weight: bold;
   font-size: 13px;
   margin: 10px 0;
+}
+.logout {
+  padding: 15px;
+  margin: 5px 0;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  border-radius: 10px;
+  background: none;
+  color: white;
+  border: none;
+  width: 100%;
+}
+.logout:hover {
+  background-color: #2e374a;
 }
