--- a/src/components/admin/users/users.module.css
+++ b/src/components/admin/users/users.module.css
@@ -1,21 +1,26 @@
 .user {
-  margin: 20px 0;
   display: flex;
+  gap: 10px;
   align-items: center;
-  justify-content: space-between;
-  gap: 20px;
 }
-.detail {
+.userImage {
+  border-radius: 50%;
+  object-fit: cover;
+}
+.buttons {
   display: flex;
-  align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
-
-.deleteBtn {
+.button {
   padding: 5px 10px;
-  background-color: rgba(220, 20, 60, 0.593);
-  color: var(--text);
   border-radius: 5px;
+  color: var(--text);
   border: none;
   cursor: pointer;
+}
+.view {
+  background-color: teal;
+}
+.delete {
+  background-color: crimson;
 }
